--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
 	</pluginRepositories>
 	<distributionManagement>
 		<repository>
-			<id>anypoint-new-exchange-v3</id>
+			<id>anypoint-exchange-v3</id>
 			<name>Corporate Repository</name>
 			<url>https://maven.anypoint.mulesoft.com/api/v3/organizations/ce235d46-115c-497c-b0e2-474afd80f5e9/maven</url>
 			<layout>default</layout>
